<resources>
    <string name="app_name">Growth Journal</string>
    <string name="welcome">Welcome Back</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="Login">Login</string>
    <string name="Sign_up_button">Sign Up</string>
    <string name="SignUp">Create account</string>
    <string name="SignOut">Sign out</string>
    <string name="resetPassword">Reset Password</string>
    <string name="continue_text">Continue</string>
    <string name="achievenments">Achievements</string>
    <string name="ideas">Ideas</string>
    <string name="title">Title</string>
    <string name="submit">Submit</string>
    <string name="journalEntries">Journal Entries</string>
    <string name="description">Description</string>
    <string name="experiences">Experiences</string>
    <string name="viewEntries"><u>View Past Entries</u></string>
    <string name="AccountText">Don\'t have an account? <font color="#A132F9"><u>Sign up</u></font></string>
    <string name="growthJournal">Growth Journal</string>
    <string name="JournalCategory">Select a Journal entry category</string>
    <string name="haveAccountText">Already have an account? <font color="#A132F9"><u>Login</u></font></string>
</resources>