<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#A132F9"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/journal_icon" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="163dp"
        android:fontFamily="@font/bunya_regular"
        android:text="@string/growthJournal"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/curved_box"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/zabal_semibold"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/email_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:boxStrokeColor="@color/black"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/password_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordLogin"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/zabal_semibold"
            android:text="@string/forgotPassword"
            android:textColor="#A132F9" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:backgroundTint="#A132F9"
            android:fontFamily="@font/zabal_semibold"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/zabal_semibold"
            android:gravity="center"
            android:text="@string/AccountText"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>