<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEntryActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/zabal_semibold"
        android:text="@string/title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/zabal_semibold"
        android:text="@string/description"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="374dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Share your experiences, achievements, or ideas here"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:hint="Enter a  title for your entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="280dp"
        android:backgroundTint="#A132F9"
        android:text="@string/submit"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextMultiLine" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="13dp"
        android:contentDescription="image"
        app:layout_constraintEnd_toStartOf="@+id/boldButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
        app:srcCompat="@drawable/image_icon" />

    <ImageButton
        android:id="@+id/boldButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        android:contentDescription="bold"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
        app:srcCompat="@drawable/bold_format" />

    <ImageButton
        android:id="@+id/italicButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"
        android:contentDescription="italics"
        android:contextClickable="false"
        app:layout_constraintStart_toEndOf="@+id/boldButton"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
        app:srcCompat="@drawable/italic_format" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="Date"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>